<resources>
    <string name="app_name">Book Manager</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_remember">Remember</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="incorrect_password_email">User does not exist or password is incorrect.</string>
    <string name="field_required">This field is required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_user">Click here, to create a new user!</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_message">Contacte um administrador para repor a sua palavra passe.</string>
    <string name="ok">ok</string>
    <string name="title_activity_add_book">AddBookActivity</string>


    <!-- Create a new user -->
    <string name="create_user">Create user</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="user_created_with_success">User created with success</string>
    <string name="user_created_without_success">Impossible to create this user, please try again</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Spinner -->
    <string-array name="dropdownlist_unidade">
        <item>un</item>
        <item>kg</item>
    </string-array>
    <string name="title_activity_create_product">CreateProductActivity</string>


</resources>
